syntax = "proto3";
package shipping;

import "external/validate/validate.proto";

// SHIPPING PROTO DEFINITION
message CreateShippingRequest{
  string user_id = 1;
  string payment_id = 2;
  string shipping_provider_id = 3;
};

message GetShippingByIdRequest{
  string id = 1;
};

message ListShippingRequest{
  uint32 page = 1;
  uint32 limit = 2;
};

message UpdateShippingRequest{
  string id = 1;
  string user_id = 2;
  string payment_id = 3;
  string shipping_provider_id = 4;
};

message DeleteShippingRequest{
  string id = 1;
};


// SHIPPING PROVIDER PROTO DEFINITION
message GetShippingProviderByIdRequest {
  string id = 1 [(validate.rules).string.ignore_empty = false];
}

message ListShippingProvidersRequest {
  uint32 page = 1 [(validate.rules).uint32.gt = 0];
  uint32 limit = 2 [(validate.rules).uint32.gt = 0];
}



